# claude-mail

./: .eventic.yaml  .gitignore  Cargo.toml  README.md  install-gateway.sh  install.ps1  install.sh
.agent/api/: agent-gateway.yaml
.github/workflows/: release.yml
crates/gateway/: .env.example  Cargo.toml  gateway.service
crates/gateway/src/: channel.rs  db.rs  discord.rs  main.rs  projects.rs  routes.rs
crates/gateway/src/channels/: discord.rs  mod.rs
crates/mcp-server/: .env.example  Cargo.toml
crates/mcp-server/src/: gateway.rs  main.rs  projects.rs  tools.rs
crates/skills-cli/: Cargo.toml
crates/skills-cli/src/: client.rs  main.rs  zip_util.rs
crates/sync-cli/: Cargo.toml
crates/sync-cli/src/: main.rs  zip_util.rs
crates/updater/: Cargo.toml
crates/updater/src/: lib.rs
deploy/: eventic-deploy.sh
docs/: agent-tools-patterns.md  gateway-setup.md  plugins.md
