[package]
name = "claude-mail"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "claude-mail"
path = "src/main.rs"

[dependencies]
rmcp = { version = "1.3", features = ["server", "transport-io", "macros"] }
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.13", features = ["json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
dotenvy = "0.15"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
anyhow = "1"
schemars = "0.8"
sha2 = "0.10"
hex = "0.4"
