[package]
name = "skills-cli"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "claude-mail-skills"
path = "src/main.rs"

[dependencies]
anyhow = "1"
clap = { version = "4", features = ["derive", "env"] }
dotenvy = "0.15"
hex = "0.4"
reqwest = { version = "0.13", features = ["json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
walkdir = "2"
zip = { version = "2", features = ["deflate"] }
tokio = { version = "1", features = ["full"] }
updater = { path = "../updater" }
