[package]
name = "updater"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1"
reqwest = { version = "0.13", features = ["json"] }
serde = { version = "1", features = ["derive"] }
tokio = { version = "1", features = ["full"] }
flate2 = "1"
tar = "0.4"
zip = { version = "2" }
self-replace = "1"
hex = "0.4"
sha2 = "0.10"
